<resources>
    <string name="app_name">Chicken Dinner</string>

    <string name="slogan">No matter where you are: Whether you are at home, or in the office, or on the beach. We will find you and we will feed you</string>
    <string name="forget">Reset Password</string>
    <string name="sloganOrder">Wine and cheese are ageless companions, like aspirin and aches, or June and moon, or good people and noble ventures</string>

    <!--MainActivity Button-->
    <string name="header_title">Chicken Dinner</string>
    <string name="header_subtitle">chicken.dinner@sltnet.lk</string>

    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="reset">Reset</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="FoodList">
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
        <item>F1</item>
    </string-array>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="feedback">"Feedback Now!"</string>
    <string name="feedbackview">"View Feedbacks"</string>
    <string name="feedbackedit">"Edit Feedback"</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Cart</string>
    <string name="menu_slideshow">Orders</string>
    <string name="menu_tools">Profile</string>
    <string name="menu_share">Sign Out</string>
    <string name="menu_send">Settings</string>
</resources>
